# python-storagelib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: Publish.yaml  QA.yaml  Test.yml
src/kiwixstorage/: __about__.py  __init__.py  test_credentials.py  upload.py
tests/: test_storage.py
